Bug 159034 - fix shading position at smart justify
Summary: fix shading position at smart justify
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords:
Depends on:
Blocks: DOCX-compatibilityMode-15 DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-01-05 06:57 UTC by László Németh
Modified: 2025-04-13 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (16.51 KB, application/vnd.oasis.opendocument.text)
2024-01-05 06:58 UTC, László Németh
Details
screenshot of the bad position of shading (13.74 KB, image/png)
2024-01-05 06:59 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-01-05 06:57:28 UTC
Description:
Shading, e.g. a soft hyphen is there in a bad position. 

Steps to Reproduce:
1. open test document

Actual Results:
Shading of soft hyphen is not between "a" and "s" of "Cras".

Expected Results:
Shading of soft hyphen is between "a" and "s" of "Cras".


Reproducible: Always


User Profile Reset: No

Additional Info:
See also Bug 119908 and Bug 158419
Comment 1 László Németh 2024-01-05 06:58:30 UTC
Created attachment 191770 [details]
test document
Comment 2 László Németh 2024-01-05 06:59:33 UTC
Created attachment 191771 [details]
screenshot of the bad position of shading
Comment 3 Commit Notification 2024-01-08 00:37:49 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a1470fd97d52c5196a0800dd64f4c8899909c4b

tdf#159034 sw smart justify: fix position of shading

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-01-09 09:36:58 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ac96909729152d01b0a20c8e6ca204e6bc3d7160

tdf#159034 sw smart justify: fix position of shading

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.