tdf#159034 sw smart justify: fix position of shading

E.g. shading of soft hyphens didn't follow space shrinking.

Follow-up to commit 20cbe88ce5610fd8ee302e5780a4c0821ddb3db4
"tdf#119908 tdf#158419 sw smart justify: fix cursor position".

Change-Id: Icdce4736d9c76ff1fbe9dd140b9f1c091e605452
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161654
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 7a1470fd97d52c5196a0800dd64f4c8899909c4b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161762
Tested-by: László Németh <nemeth@numbertext.org>